--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3001,49 +3001,71 @@ Contact Area Style
   border-radius: 100%;
   border: 2px solid #cfd9f9;
 }
+
+
 .contact-form-info form button {
-  border: unset;
-  box-shadow: unset;
-  padding: 15px 24px;
-  padding-left: 48px;
+  z-index: 1;
   position: relative;
+  padding: 13px 25px;
   border-radius: 5px;
-  position: relative;
+  border: none;
   display: inline-block;
-  color: var(--blackColor);
+  color: var(--whiteColor);
   transition: var(--transition);
-  background-color: var(--whiteColor);
   font-family: var(--heading-font-family);
   font-size: 15px;
   font-weight: 600;
 }
-.contact-form-info form button::before {
-  top: 50%;
-  left: 25px;
-  width: 13px;
-  height: 13px;
-  content: "";
-  position: absolute;
-  border-radius: 100%;
+.contact-form-info form button i {
+  width: 29px;
+  height: 29px;
+  font-size: 13px;
+  line-height: 29px;
+  margin-right: 7px;
+  text-align: center;
+  border-radius: 90px;
   display: inline-block;
-  background-color: #b108ff;
-  transform: translateY(-50%);
+  color: var(--blackColor);
+  background-color: var(--whiteColor);
+}
+.contact-form-info form button::before {
+  left: 0;
+  top: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 1;
+  visibility: visible;
+  position: absolute;
+  border-radius: 90px;
+  transition: var(--transition);
+  background: linear-gradient(96deg, #8C73E5 0%, #8C73E5 51.56%, #8C73E5 100%);
 }
 .contact-form-info form button::after {
-  top: -1px;
-  left: -1px;
-  right: -1px;
-  bottom: -1px;
+  left: 0;
+  top: 0;
   content: "";
+  width: 100%;
+  height: 100%;
+  opacity: 0;
   z-index: -1;
+  visibility: hidden;
   position: absolute;
-  border-radius: 5px;
+  border-radius: 90px;
   transition: var(--transition);
-  background: linear-gradient(96deg, #0e0d10 0%, #080205 51.56%, #3f015d 100%);
+  background: linear-gradient(293deg, #01020a, #01020a, #01020a);
 }
 .contact-form-info form button:hover {
   color: var(--whiteColor);
-  background-color: transparent;
+}
+.contact-form-info form button:hover::before {
+  opacity: 0;
+  visibility: hidden;
+}
+.contact-form-info form button:hover::after {
+  opacity: 1;
+  visibility: visible;
 }
 
 /*=========================================
@@ -3060,7 +3082,7 @@ Projects Area Style
   margin-bottom: 25px;
 }
 .projects-section-title .title span {
-  color: #b108ff;
+  color: #8C73E5;
   margin-bottom: 10px;
   font-family: var(--heading-font-family);
   font-size: 16px;
